<resources>
    <string name="app_name">Humblr</string>
    <string name="title_subreddits">Subreddits</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_user">User</string>

    <string name="first_title">Welcome to Humblr</string>
    <string name="second_title" translatable="false">SubHumblr</string>
    <string name="third_title">Share and save</string>
    <string name="first_text">Here are communities of all kinds of interests</string>
    <string name="second_text">You can find new subs by interests and see the subs you are subscribed to</string>
    <string name="third_text">Favorites tab stores bookmarks with comments and subs. In your profile you will find information about yourself.</string>
    <string name="skip">Skip</string>
    <string name="ready">Ready</string>

    <string name="button_login">Sign in</string>
    <string name="login_text">Find friends with Humblr</string>

    <string name="separator_text" translatable="false">-</string>

    <string name="new_tab">New</string>
    <string name="popular_tab">Popular</string>
    <string name="search_hint">Search</string>

    <string name="friends_title">Friends</string>

    <string name="subscribe_title">Subscribe</string>
    <string name="unsubscribe_title">Unsubscribe</string>
    <string name="error_text">No network connection</string>
    <string name="empty_text">Info is unavailable or was deleted</string>


    <string name="logout_warning_message">Are you sure you want to logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="comments">Comments</string>
    <string name="all">All</string>
    <string name="saved">Saved</string>
    <string name="logout">Logout</string>
    <string name="clear_saved">Clear saved</string>
    <string name="friend_list">Friend list</string>
    <string name="you_subscribed">You were subscribed</string>
    <string name="you_unsubscribed">You were unsubscribed</string>
    <string name="share">Share</string>
</resources>