<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.favourites.FavouritesFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/first_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:checkedChip="@id/chip_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_subreddits"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/title_subreddits"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_comments"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/second_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:checkedChip="@id/chip_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_group"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ship_saved"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_group" />


</androidx.constraintlayout.widget.ConstraintLayout>