<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.nikitagorbatko.humblr.ui.onboarding.ViewPagerFragment"
        android:label="fragment_view_pager"
        tools:layout="@layout/fragment_view_pager">
        <action
            android:id="@+id/action_viewPagerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/viewPagerFragment"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/navigation_subreddits"
        android:name="com.nikitagorbatko.humblr.ui.subreddits.SubredditsFragment"
        android:label="@string/title_subreddits"
        tools:layout="@layout/activity_main" >
        <action
            android:id="@+id/action_navigation_subreddits_to_subredditPostsFragment"
            app:destination="@id/subredditPostsFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/navigation_subreddits" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.nikitagorbatko.humblr.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_navigation_favourites_to_userFragment"
            app:destination="@id/userFragment"
            app:popUpTo="@id/navigation_favourites" />
        <action
            android:id="@+id/action_navigation_favourites_to_subredditPostsFragment"
            app:destination="@id/subredditPostsFragment"
            app:popUpTo="@id/navigation_favourites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.nikitagorbatko.humblr.ui.account.AccountFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_user_to_friendsFragment"
            app:destination="@id/friendsFragment"
            app:popUpTo="@id/navigation_user" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.nikitagorbatko.humblr.ui.login.LoginFragment"
        android:label="LoginFragment">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_subreddits"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.nikitagorbatko.humblr.ui.SplashFragment"
        android:label="SplashFragment">
        <action
            android:id="@+id/action_splashFragment_to_viewPagerFragment"
            app:destination="@id/viewPagerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@+id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_subreddits"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/subredditPostsFragment"
        android:name="com.nikitagorbatko.humblr.ui.subreddit_posts.PostsFragment"
        android:label="fragment_subredit_posts"
        tools:layout="@layout/fragment_posts" >
        <action
            android:id="@+id/action_subredditPostsFragment_to_singlePostFragment"
            app:destination="@id/singlePostFragment"
            app:popUpTo="@id/subredditPostsFragment" />
        <argument
            android:name="subreddit"
            app:argType="com.nikitagorbatko.humblr.api.pojos.SubredditDto" />
    </fragment>
    <fragment
        android:id="@+id/singlePostFragment"
        android:name="com.nikitagorbatko.humblr.ui.post.SinglePostFragment"
        android:label="fragment_single_post"
        tools:layout="@layout/fragment_single_post" >
        <action
            android:id="@+id/action_singlePostFragment_to_userFragment"
            app:destination="@id/userFragment"
            app:popUpTo="@id/singlePostFragment" />
        <argument
            android:name="post"
            app:argType="com.nikitagorbatko.humblr.api.pojos.ChildPostDto" />
    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.nikitagorbatko.humblr.ui.user.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user" >
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.nikitagorbatko.humblr.ui.friends.FriendsFragment"
        android:label="fragment_friends"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_friendsFragment_to_userFragment"
            app:destination="@id/userFragment"
            app:popUpTo="@id/friendsFragment" />
    </fragment>
</navigation>